syntax = "proto3";


option go_package = "github.com/MauricioAntonioMartinez/grpc-file-upload/file";


message File { 
    bytes data = 1;
}

message FileData { 
    string name = 1;
    int64 size = 2;
    string type = 3;
}

message FileResponse { 
    string file_name = 1;
    string location = 2;
}

message FileRequest { 
    oneof file { 
        FileData file_data = 1;
        File data = 2;
    }
}

service UploadService  { 
     rpc UploadFile(stream FileRequest)  returns (FileResponse){};
}